@@ -30,7 +30,7 @@ using namespace std;
 void JTL::send( Session* session, int resolution, int tile ){
 
   Timer function_timer;
-  
+
   if( session->loglevel >= 3 ) (*session->logfile) << "JTL handler reached" << endl;
 
 
