@@ -1,3 +1,8 @@
+13/11/2018:
+	- Converted RawTile dataLength variable to unsigned to improve overflow
+	  avoidance as per https://github.com/ruven/iipsrv/pull/156
+
+
 12/11/2018:
 	- Refactored image procesing code. Transform functions are now encapsulated
 	  within a struct to allow new processing engines to be more easily added.
